infra/k8s/tysoncloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tysoncloud
  labels:
    managed-by: tysoncloud
