infra/k8s/tysoncloud/tysoncloud-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tysoncloud
  namespace: tysoncloud
spec:
  parentRefs:
    - name: tysoncloud-gateway
      namespace: tc-system
  hostnames:
    - "tc.tysonjenkins.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tysoncloud
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tysoncloud
  namespace: tysoncloud
  labels:
    app: tysoncloud
spec:
  selector:
    app: tysoncloud
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tysoncloud
  labels:
    app: tysoncloud
  namespace: tysoncloud
spec:
  selector:
    matchLabels:
      app: tysoncloud
  template:
    metadata:
      labels:
        app: tysoncloud
    spec:
      containers:
        - name: tysoncloud
          image: timmijinks/tysoncloud-frontend
          ports:
            - containerPort: 3000
